--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -42,7 +42,7 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build
+        run: npm run serve
 
       - name: Archive artifacts
         uses: actions/upload-artifact@v2
