--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -33,34 +33,27 @@ jobs:
         uses: actions/checkout@v2
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: "18"
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build
-        run: npm run serve
-
-      - name: Archive artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: built-files
-          path: dist # 替换为你的构建输出目录
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+      - name: Install dependencies
+        run: npm install
+      - name: Build Vue.js App
+        run: npm run build
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - name: Build and push
+          username: ${{secrets.DOCKERHUB_USERNAME}}
+          password: ${{secrets.DOCKERHUB_PASSWORD}}
+      - name: Build and Push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
-          platforms: linux/amd64, linux/arm64
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/vue:1.0
+          context: .
+          platforms: linux/amd64,linux/arm64
+          tags: ${{secrets.DOCKERHUB_USERNAME}}/vue:1.1
