--- a/default.conf
+++ b/default.conf
@@ -1,11 +1,25 @@
-﻿server {
-    listen 88;
-    root /usr/share/nginx/html;
-    index index.html index.htm;
-    if ($request_method = 'OPTIONS') {
-        return 204;
-    }
+﻿
+events {}
+
+http {
+  server {
+    listen 80;
     location / {
-      try_files $uri $uri/ = 404;
+      root /usr/share/nginx/html;
+      index index.html;
     }
+  }
 }
+
+
+# server {
+#     listen 88;
+#     root /usr/share/nginx/html;
+#     index index.html index.htm;
+#     if ($request_method = 'OPTIONS') {
+#         return 204;
+#     }
+#     location / {
+#       try_files $uri $uri/ = 404;
+#     }
+# }
